--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
       <!-- кінець 2 секції Portfolio -->
       <!-- секція 3 Contact -->
-      <section id="Contacts" class="contacts">
+      <section id="#Contacts" class="contacts">
         <div class="container container-main-contacts">
           <h2 class="contacts-h-two-team">Our Team</h2>
           <ul class="contacts-list">
@@ -135,77 +135,90 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Mark Guerrero</h3>
                 <p class="contacts-info">Product Designer</p>
-                <div class="contacts-socials">
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </div>
                     </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
-
             <li class="contacts-item">
               <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Tom Ford</h3>
                 <p class="contacts-info">Frontend Developer</p>
-                <div class="contacts-socials">
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
-
             <li class="contacts-item">
               <img
                 src="./images/camilagarcia.jpg"
@@ -215,39 +228,45 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Camila Garcia</h3>
                 <p class="contacts-info">Marketing</p>
-                <div class="contacts-socials">
-                  <div class="contacts-social-link">
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
                     <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
+                      <div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
-
             <li class="contacts-item">
               <img
                 src="./images/danielwilson.jpg"
@@ -257,36 +276,43 @@
               <div class="contacts-container-info">
                 <h3 class="contacts-h-three-team">Daniel Wilson</h3>
                 <p class="contacts-info">UI Designer</p>
-                <div class="contacts-socials">
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="contacts-social-link">
-                    <a href="#" class="contacts-info-link">
-                      <svg class="contacts-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
+                <ul class="contacts-info-list">
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+
+                  <li class="contacts-info-item">
+                    <a href="#" class="contacts-info-link"
+                      ><div class="contacts-info-container">
+                        <svg class="contacts-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg></div
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -387,19 +413,18 @@
     <footer class="box-footer">
       <div class="container container-footer">
         <div class="container-footer-logo">
-          <a href="./index.html" class="logo-link">
-            Web<span class="logo-footer">Studio</span>
-          </a>
+          <a href="./index.html" class="logo-link"
+            >Web<span class="logo-footer">Studio</span></a
+          >
           <p class="info-footer">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
-
         <div class="container-footer-social">
           <p class="footer-title-social">Social media</p>
-          <div class="contacts-socials">
-            <div class="contacts-social-link">
+          <ul class="contacts-info-list">
+            <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon" width="24" height="24">
@@ -407,9 +432,9 @@
                   </svg>
                 </div>
               </a>
-            </div>
+            </li>
 
-            <div class="contacts-social-link">
+            <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon" width="24" height="24">
@@ -417,9 +442,9 @@
                   </svg>
                 </div>
               </a>
-            </div>
+            </li>
 
-            <div class="contacts-social-link">
+            <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon" width="24" height="24">
@@ -427,9 +452,9 @@
                   </svg>
                 </div>
               </a>
-            </div>
+            </li>
 
-            <div class="contacts-social-link">
+            <li class="contacts-info-item">
               <a href="#" class="contacts-info-link">
                 <div class="contacts-info-container">
                   <svg class="contacts-icon" width="24" height="24">
@@ -437,8 +462,8 @@
                   </svg>
                 </div>
               </a>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
